Update the library